[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Kenney Mini Square.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/dice/armor.png" type="Texture" id=2]
[ext_resource path="res://Sprites/dice/attack_01.png" type="Texture" id=3]
[ext_resource path="res://Sprites/health.png" type="Texture" id=4]
[ext_resource path="res://Scripts/UIScene.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="UIRootNode" type="Node2D"]
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 104.0
margin_bottom = 112.0
color = Color( 0, 0, 0, 0.470588 )

[node name="Health" type="Sprite" parent="."]
position = Vector2( 23.5, 23.5 )
scale = Vector2( 1.83333, 1.83333 )
texture = ExtResource( 4 )

[node name="HealthLabel" type="Label" parent="Health"]
margin_left = 13.0
margin_top = -11.0
margin_right = 93.0
margin_bottom = 9.0
custom_colors/font_color = Color( 0.819608, 0.819608, 0.819608, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "9999"
valign = 1
autowrap = true

[node name="Armor" type="Sprite" parent="."]
position = Vector2( 24, 56 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="ArmorLabel" type="Label" parent="Armor"]
margin_left = 13.0
margin_top = -11.0
margin_right = 93.0
margin_bottom = 9.0
custom_colors/font_color = Color( 0.819608, 0.819608, 0.819608, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "9999"
valign = 1
autowrap = true

[node name="Atk" type="Sprite" parent="."]
position = Vector2( 24, 88 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="AtkLabel" type="Label" parent="Atk"]
margin_left = 13.0
margin_top = -10.0
margin_right = 93.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.819608, 0.819608, 0.819608, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "9999"
valign = 1
autowrap = true
